Included variable partial to main scss file through @import

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,7 @@
+@import '../assets/variable';
+
 html, body {
     margin: 0;
     padding: 0;
-    background-color: lightgreen;
+    background-color: $bg;
 }
