Prettified files using prettier

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,8 @@
 @import '../assets/variable';
 
-html, body {
-    margin: 0;
-    padding: 0;
-    background-color: $bg;
+html,
+body {
+	margin: 0;
+	padding: 0;
+	// background-color: $bg;
 }
